--- a/Mascotte/Mascotte/MainWindow.xaml
+++ b/Mascotte/Mascotte/MainWindow.xaml
@@ -1,8 +1,9 @@
 ﻿<Window x:Class="Mascotte.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="582.724" Width="1059.329">
     <Grid>
-        
+        <Separator HorizontalAlignment="Left" Height="100" Margin="754,211,0,0" VerticalAlignment="Top" Width="100"/>
+
     </Grid>
 </Window>
